--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ju-ep-2024",
+  "name": "ju-pydata-prague-25",
   "type": "module",
   "private": true,
   "scripts": {
@@ -8,12 +8,9 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.49.16",
+    "@slidev/cli": "^52.1.0",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
-    "vue": "^3.4.31"
-  },
-  "devDependencies": {
-    "playwright-chromium": "^1.45.1"
+    "vue": "^3.5.18"
   }
 }
