--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@slidev/cli": "^52.1.0",
+    "@slidev/theme-apple-basic": "^0.25.1",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "slidev-theme-eloc": "^1.1.0",
+    "slidev-theme-excali-slide": "^1.3.0",
     "vue": "^3.5.18"
   }
 }
